examples/test/testpolicy6808.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6808
  namespace: namespace40
spec:
  podSelector:
    matchLabels:
      key43: value2
      key26: value11
      key17: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value5
          key48: value0
      podSelector:
        matchLabels:
          key45: value22
          key38: value49
